--- a/app/src/main/res/layout/activity_winner_window.xml
+++ b/app/src/main/res/layout/activity_winner_window.xml
@@ -7,15 +7,92 @@
     tools:context=".WinnerWindow">
 
     <pl.droidsonroids.gif.GifImageView
-        android:layout_width="337dp"
-        android:layout_height="282dp"
+        android:id="@+id/gifImageView"
+        android:layout_width="330dp"
+        android:layout_height="198dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/transparent"
         android:src="@drawable/winnergif"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/headerWinnerWindow" />
+
+    <TextView
+        android:id="@+id/headerWinnerWindow"
+        android:layout_width="297dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="52dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        android:textSize="35dp"/>
+
+    <TextView
+        android:id="@+id/resultsWinnerWindow"
+        android:layout_width="127dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="40dp"
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gifImageView"
+        tools:text="@string/labelWinnerStatistics"
+        android:gravity="center"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/winningsactiveplayer"
+        android:layout_width="230dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultsWinnerWindow"
+        android:gravity="center"
+        android:textSize="15dp"/>
+
+    <TextView
+        android:id="@+id/lossesactiveplayer"
+        android:layout_width="230dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/winningsactiveplayer"
+        android:gravity="center"
+        android:textSize="15dp"/>
+
+    <Button
+        android:id="@+id/buttonplayagainwinnerwindow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lossesactiveplayer"
+        tools:text="@string/textplayagainwinnerwindow" />
+
+    <Button
+        android:id="@+id/buttonplayagainwinnerwindow2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonplayagainwinnerwindow"
+        tools:text="@string/textactivegameswinnerwindow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
