--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
         android:layout_width="182dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
+        android:onClick="goToGame"
         android:text="@string/log_in"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
