--- a/app/src/main/res/layout/activity_winner_window.xml
+++ b/app/src/main/res/layout/activity_winner_window.xml
@@ -8,91 +8,69 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
-        android:layout_width="330dp"
+        android:layout_width="wrap_content"
         android:layout_height="198dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
         android:src="@drawable/winnergif"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerWinnerWindow" />
 
     <TextView
         android:id="@+id/headerWinnerWindow"
-        android:layout_width="297dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="52dp"
-        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="@string/winner_header"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/gifImageView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center"
-        android:textSize="35dp"/>
+        app:layout_constraintVertical_bias="0.04000002"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/resultsWinnerWindow"
         android:layout_width="127dp"
         android:layout_height="46dp"
-        android:layout_marginTop="40dp"
-        android:text="TextView"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gifImageView"
-        tools:text="@string/labelWinnerStatistics"
-        android:gravity="center"
-        android:textSize="15dp" />
-
-    <TextView
-        android:id="@+id/winningsactiveplayer"
-        android:layout_width="230dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultsWinnerWindow"
-        android:gravity="center"
-        android:textSize="15dp"/>
-
-    <TextView
-        android:id="@+id/lossesactiveplayer"
-        android:layout_width="230dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/winningsactiveplayer"
-        android:gravity="center"
-        android:textSize="15dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />
 
     <Button
         android:id="@+id/buttonplayagainwinnerwindow"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:text="Button"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/textplayagainwinnerwindow"
+        app:layout_constraintBottom_toTopOf="@+id/buttonQuit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lossesactiveplayer"
-        tools:text="@string/textplayagainwinnerwindow" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/buttonplayagainwinnerwindow2"
+        android:id="@+id/buttonQuit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Button"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/quit"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonplayagainwinnerwindow"
-        tools:text="@string/textactivegameswinnerwindow" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
