--- a/app/src/main/res/layout/activity_current_game.xml
+++ b/app/src/main/res/layout/activity_current_game.xml
@@ -49,7 +49,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
-        android:text="@string/resultText"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/paperButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +61,7 @@
         android:layout_marginStart="16dp"
         android:text="TextView"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewPlayer2"
         app:layout_constraintEnd_toStartOf="@+id/textViewPlayer2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -75,6 +75,7 @@
         android:layout_marginEnd="16dp"
         android:text="TextView"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textViewPlayer1"
